--- a/client/profile-wizard/style.scss
+++ b/client/profile-wizard/style.scss
@@ -259,11 +259,7 @@
 
 			label.components-checkbox-control__label {
 				color: $studio-gray-80;
-				margin-top: $gap-smallest;
-			}
-
-			label.components-checkbox-control__label {
-				margin-left: $gap;
+				margin-left: $gap-small;
 			}
 
 			.components-base-control__help {
