--- a/packages/components/src/pill/style.scss
+++ b/packages/components/src/pill/style.scss
@@ -4,5 +4,5 @@
 	color: $medium-gray-text;
 	display: inline-block;
 	font-size: 12px;
-	padding: 1px 10px;
+	padding: 2px 10px;
 }
